--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
 	<link rel="apple-touch-icon" href="../assets/images/logo.svg" />
 	
 	<!-- TITLE -->
-	<title>Crypto Alert</title>
+	<title>Crypto Wallet</title>
 	<meta name="title" content=""/>
 	<meta name="og:title" content=""/>
 
